# Asteroids

./: CMakeLists.txt
Framework/: CMakeLists.txt
Framework/src/: launch.cpp
Project2/: asteroids.cpp
include/: Animation.hpp  Bullet.hpp  Enemy.cpp  Enemy.hpp  EventExplosion.hpp  Framework.hpp  Game.hpp  InitOptions.hpp  Player.hpp  SpaceObject.hpp  Vector.hpp  main.hpp
src/: Animation.cpp  Bullet.cpp  Enemy.cpp  Enemy.hpp  EventExplosion.cpp  Game.cpp  InitOptions.cpp  Player.cpp  SpaceObject.cpp  Vector.cpp  main.cpp
task2020_linux_mac/: README.txt
